<resources>
    <string name="app_name">e-pijaca</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up">Sign Up</string>
    <string name="skip_sign_up">Continue without registration</string>
    <string name="sign_in">Sign In</string>
    <string name="skip_sign_in">Continue without signing in</string>
    <string name="sign_up_here">Sign Up here</string>
    <string name="forgot_password">
        <u>Forgot password?</u>
    </string>
    <string name="store_image">store_image</string>
    <string name="shop_name_placeholder">Shop name placeholder</string>
    <string name="subscriptions_and_favorites">Favorites</string>
    <string name="product_name">Product name</string>
    <string name="cancel">Cancel</string>
    <string name="choose_category">Choose category</string>
    <string name="price">Price</string>
    <string name="price_from">Price From</string>
    <string name="price_to">Price to</string>
    <string name="location">Location</string>
    <string name="choose_country">Choose country</string>
    <string name="choose_region">Choose region</string>
    <string name="choose_county">Choose county</string>
    <string name="find_my_location">Find my location and choose radius</string>
    <string name="search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop_header_image">Shop header image</string>
    <string name="lorem_ipsum_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis diam lacus, posuere
        eu aliquam sed, sollicitudin non tortor. Nulla cursus nibh aliquam, tristique libero id, porttitor nibh.
        Suspendisse viverra risus ultrices ullamcorper elementum. Aenean ac hendrerit purus. Mauris lobortis tellus
        arcu, sed scelerisque dui viverra et.
    </string>
    <string name="product_list">Product list</string>
    <string name="shop_detail_tab_gallery">Gallery</string>
    <string name="shop_detail_tab_location">Location</string>
    <string name="shop_detail_tab_company">Company</string>
    <string name="gallery_image">Gallery image</string>
    <string name="title_activity_maps">Map</string>
    <string name="subscribe_to_company">Subscribe to company</string>
    <string name="shop_list">Shop list</string>
    <string name="company_management">Company management</string>
    <string name="why_should_you_register">Why should you register your company?</string>
    <string name="enter_company_information">Enter your company information</string>
    <string name="company_name">Company name</string>
    <string name="company_description">Company description</string>
    <string name="company_pib">Company pib</string>
    <string name="choose_company_location">Company location</string>
    <string name="company_regisration_title">Company registration</string>
    <string name="add_photos_for_company">Add photos for your company</string>
    <string name="register_company">Register your company</string>
    <string name="enter_shop_information">Enter your shop information</string>
    <string name="enter_shop_name">Enter your shop name</string>
    <string name="enter_shop_description">Enter your shop description</string>
    <string name="choose_shop_location">Choose shop location</string>
    <string name="register_shop">Register new shop</string>
    <string name="add_photos_for_shop">Add photos for your shop</string>
    <string name="shop_regisration_title">Shop registration</string>
    <string name="shop_management_title">Shop management</string>
    <string name="name">Name</string>
    <string name="shop_name">Shop name</string>
    <string name="description">Description</string>
    <string name="shop_description">Shop description</string>
    <string name="shop_location">Shop location</string>
    <string name="add_or_remove_photos_for_shop">Add or remove photos for your shop</string>
    <string name="delete_shop">Delete this shop</string>
    <string name="product_regisration_title">Product registration</string>
    <string name="enter_product_information">Product information</string>
    <string name="enter_product_name">Product name</string>
    <string name="enter_product_description">Product description</string>
    <string name="enter_product_price">Product price</string>
    <string name="add_photos_for_product">Add photos for your product</string>
    <string name="save_product">Save product</string>
    <string name="product_management_title">Product management</string>
    <string name="delete_product">Delete product</string>
    <string name="product_name_1">Product name #1</string>
    <string name="product_description">Product description</string>
    <string name="four_dollars">4$/kg</string>
    <string name="shops_with_this_product">Shops with this product</string>
    <string name="save_changes">Save changes</string>
    <string name="delete_this_product">Delete this product</string>
    <string name="notifications">Notifications</string>
    <string name="notify_on_price_change">Notify me when a shop i am subscribed to changes pricing</string>
    <string name="notify_on_new_product">Notify me when a shop i am subscribed to adds new product</string>
    <string name="notify_on_remove_product">Notify me when a shop i am subscribed to removes a product</string>
    <string name="recieve_email_and_push_notifications">Receive email notifications</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="company_city">Company city</string>
    <string name="enter_company_address">Company address</string>
    <string name="company_country">Company country</string>
    <string name="company_id">Company id</string>
    <string name="here_you_can_manage_your_company">Manage company</string>
    <string name="add_product">Add product</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="log_out">Sign Out</string>
    <string name="log_in">Sign In</string>
    <string name="my_companies">My companies</string>
    <string name="company_management_title">Company management</string>
    <string name="company_id_title">Company Id</string>
    <string name="company_address_title">Company Address</string>
    <string name="shop_lng">Shop longitude</string>
    <string name="shop_ltd">Shop latitude</string>
    <string name="about_company">About company</string>
    <string name="company_address">Company address</string>
    <string name="my_shops_title">My shops</string>
    <string name="my_products_title">My products</string>
    <string name="name_placeholder">name placeholder</string>
    <string name="shop_browser_fragment_title">Browse shops</string>
    <string name="companies_management_fragment_title">Companies management</string>
    <string name="product_list_fragment_title">Product list</string>
    <string name="settings_fragment_title">Settings</string>
    <string name="shop_detail_fragment_title">Shop details</string>
    <string name="products">Products</string>
    <string name="price_placeholder">3€/kg</string>
    <string name="browse_products">Browse products</string>
    <string name="settings">Settings</string>
    <string name="register">Sign Up</string>
    <string name="profile_image">Profile image</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="profile_management">Profile Management</string>
    <string name="access_token">
        pk.eyJ1IjoidGFyamFubnQiLCJhIjoiY2tiemFvM2tsMTJobDJxbzRxaXpsNHFiYyJ9.-wIdVlW58v4h2ffWMXP12w
    </string>
    <string name="select_a_location">Select a location</string>
    <string name="move_map_instruction">Move map</string>
    <string name="location_picker_select_location_button_cancel">Cancel</string>
    <string name="location_picker_select_location_button_select">Select</string>
    <string name="user_location_permission_explanation">This app needs location permissions in order to show its
        functionality.
    </string>
    <string name="user_location_permission_not_granted">You didn\'t grant location permissions.</string>
    <string name="location_picker_place_name_result">Place name: %1$s</string>
    <string name="location_picker_dropped_marker_snippet_no_results">No results</string>
    <string name="product_image">Product image</string>
    <string name="favorites">Favorites</string>
    <string name="unsubscribe_from_company">Unsubscribe</string>
    <string name="edit_shop">Edit shop</string>
    <string name="shops_browser_by_company_title">Browse shops by company</string>
    <string name="search_term">Search term</string>
    <string name="profile_management_title">Profile management</string>
    <string name="unit">Unit</string>
    <string name="image_management">Image Management</string>
    <string name="product_detail_shops_explanation">This product is available in the following shop(s)</string>
    <string name="confirm">Confirm</string>
    <string name="manage_products">Manage products</string>
    <string name="products_in_shop">Products in shop</string>
    <string name="products_in_company">Products in company</string>
    <string name="manage_shop_images">Manage shop images</string>
    <string name="add_images">Add Images</string>
    <string name="manage_images">Manage images</string>
    <string name="editProduct">Edit product</string>
    <string name="price_not_set">Price not set</string>
    <string name="sync_enabled">Synchronization enabled</string>
    <string name="location_tracking_enabled">Location tracking enabled</string>
    <string name="enter_search_radius_in_km">Enter search radius in km</string>
    <string name="location_settings">Location settings</string>
    <string name="image">image</string>
    <string name="add_new_product">Add new product</string>
    <string name="company_products">Company products</string>
    <string name="product_unit">Product unit</string>
    <string name="title_company_list">Companies</string>
    <string name="title_company_detail">Company Detail</string>
    <string name="compay_details">Company Details</string>
</resources>
