<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:background="@color/lightGrey" android:layout_height="match_parent"
            android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:id="@+id/inputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <TextView
                    android:text="@string/name"
                    style="@style/FormLabel"/>
            <EditText style="@style/FormInput"
                      android:hint="@string/enter_product_name"
                      android:id="@+id/nameField"/>
            <Space
                    android:layout_width="1dp"
                    android:layout_height="@dimen/vertical_spacer"/>
            <TextView
                    android:text="@string/description"
                    style="@style/FormLabel"/>
            <EditText style="@style/FormInput"
                      android:hint="@string/enter_product_description"
                      android:id="@+id/descriptionField"/>
            <Space
                    android:layout_width="1dp"
                    android:layout_height="@dimen/vertical_spacer"/>
            <TextView
                    android:text="@string/price"
                    style="@style/FormLabel"/>
            <EditText style="@style/FormInput"
                      android:hint="@string/enter_product_price"
                      android:inputType="numberDecimal"
                      android:id="@+id/priceField"/>
            <Space
                    android:layout_width="1dp"
                    android:layout_height="@dimen/vertical_spacer"/>
            <TextView
                    android:text="@string/unit"
                    style="@style/FormLabel"/>
            <EditText style="@style/FormInput"
                      android:hint="@string/product_unit"
                      android:id="@+id/unitField"/>
            <Space
                    android:layout_width="1dp"
                    android:layout_height="@dimen/vertical_spacer"/>
            <Button android:id="@+id/saveButton"
                    android:text="@string/save_product"
                    style="@style/PrimaryButton"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


