<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/inputLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.439"
            app:layout_constraintStart_toStartOf="parent">
        <TextView
                android:id="@+id/companyNameTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/green"
                android:textStyle="bold"/>
        <TextView
                android:id="@+id/companyNameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_company"/>
        <Space android:layout_width="1dp" android:layout_height="@dimen/vertical_spacer"/>
        <TextView
                android:id="@+id/companyAddressTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_address_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/green"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/companyAddressField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/company_address"/>
        <Space android:layout_width="1dp" android:layout_height="@dimen/vertical_spacer"/>
        <com.google.android.material.button.MaterialButton
                android:id="@+id/registerShopButton"
                android:text="@string/register_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:padding="@dimen/button_padding"
                android:textSize="@dimen/button_text_size"
                style="@style/Widget.AppCompat.Button.Borderless"
                app:strokeColor="@color/green"
                app:strokeWidth="1dp"
                app:cornerRadius="0dp"
                app:backgroundTint="@android:color/transparent"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/imageManagementButton"
            android:text="@string/image_management"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:padding="@dimen/button_padding"
            android:textSize="@dimen/button_text_size"
            style="@style/Widget.AppCompat.Button.Borderless"
            app:strokeColor="@color/green"
            app:strokeWidth="1dp"
            app:cornerRadius="0dp"
            app:backgroundTint="@android:color/transparent"/>
        <TextView
                android:id="@+id/myShopsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_shops_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/green"
                android:textStyle="bold"/>

        <ListView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shopsListView"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
