<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   tools:context=".settings.SettingsFragment">

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

        <TextView
                android:id="@+id/settings_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/green"
                android:textStyle="bold"/>
        <Space
                android:layout_width="1dp"
                android:layout_height="@dimen/vertical_spacer"/>
        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sync_enabled"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/sync_enabled"
                app:theme="@style/Color1SwitchStyle"/>
        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/email_notification_enabled"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/recieve_email_and_push_notifications"
                app:theme="@style/Color1SwitchStyle"/>
        <TextView
                android:id="@+id/location_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/green"
                android:textStyle="bold"/>
        <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/location_tracking_enabled"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/location_tracking_enabled"
                app:theme="@style/Color1SwitchStyle"/>
        <EditText
                android:id="@+id/search_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/enter_search_radius_in_km"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:padding="@dimen/text_padding"/>
        <Space
                android:layout_width="1dp"
                android:layout_height="@dimen/vertical_spacer"/>
        <Button
                android:id="@+id/saveChangesButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/button_margin_adjust"
                android:layout_marginTop="@dimen/button_margin_adjust"
                android:layout_marginRight="@dimen/button_margin_adjust"
                android:layout_marginBottom="@dimen/button_margin_adjust"
                android:background="@color/green"
                android:padding="@dimen/button_padding"
                android:text="@string/save_changes"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
